--- a/style.css
+++ b/style.css
@@ -15,15 +15,22 @@ body{
     float: right;
 }
 
+table {
+    border-spacing: 0;
+    border-width: 0px;
+    /*border-collapse: collapse;*/
+}
+
 .block{
     background: #ffffff;
     border-style: solid;
     border-width: 1px;
     border-color: #000000;
     height: 30px;
-    width: 9%;
+    width: 45px;
     float: left;
     padding: 1px;
+    margin: 0px;
 }
 
 #inactive{/*id takes precedence over class*/
