--- a/style.css
+++ b/style.css
@@ -59,3 +59,10 @@ button{
     display: none;
     background: #3ddf52;
 }
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
